Fix padding on small boxes title

--- a/content/cloud-admin.css
+++ b/content/cloud-admin.css
@@ -6853,10 +6853,6 @@ fieldset[disabled] .btn-yellow.active {
 .box.solid .box-title.big {
   padding: 15px 10px 7px;
 }
-.box.border .box-title.small,
-.box.solid .box-title.small {
-  padding: 5px 10px 3px;
-}
 .box.border .box-title.small h4,
 .box.solid .box-title.small h4 {
   font-size: 16px;
